docs/api/qiskit/0.24/qiskit.aqua.components.neural_networks.NumPyDiscriminator.mdx
---
title: NumPyDiscriminator
description: API reference for qiskit.aqua.components.neural_networks.NumPyDiscriminator
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.neural_networks.NumPyDiscriminator
---

<span id="qiskit-aqua-components-neural-networks-numpydiscriminator" />

# qiskit.aqua.components.neural\_networks.NumPyDiscriminator

<Class id="qiskit.aqua.components.neural_networks.NumPyDiscriminator" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/components/neural_networks/numpy_discriminator.py" signature="NumPyDiscriminator(n_features=1, n_out=1)">
  Discriminator based on NumPy

  **Parameters**

  *   **n\_features** (`int`) – Dimension of input data vector.
  *   **n\_out** (`int`) – Dimension of the discriminator’s output vector.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.__init__" name="__init__" signature="__init__(n_features=1, n_out=1)">
    **Parameters**

    *   **n\_features** (`int`) – Dimension of input data vector.
    *   **n\_out** (`int`) – Dimension of the discriminator’s output vector.
  </Function>

  ## Methods

  |                                                                                                                                                                                |                                                                                                                                                                                                                                           |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.__init__ "qiskit.aqua.components.neural_networks.NumPyDiscriminator.__init__")(\[n\_features, n\_out]) | **type n\_features**`int`                                                                                                                                                                                                                 |
  | [`get_label`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.get_label "qiskit.aqua.components.neural_networks.NumPyDiscriminator.get_label")(x\[, detach])        | Get data sample labels, i.e. true or fake.                                                                                                                                                                                                |
  | [`load_model`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.load_model "qiskit.aqua.components.neural_networks.NumPyDiscriminator.load_model")(load\_dir)        | Load discriminator model                                                                                                                                                                                                                  |
  | [`loss`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.loss "qiskit.aqua.components.neural_networks.NumPyDiscriminator.loss")(x, y\[, weights])                   | Loss function :param x: sample label (equivalent to discriminator output) :type x: numpy.ndarray :param y: target label :type y: numpy.ndarray :param weights: customized scaling for each sample (optional) :type weights: numpy.ndarray |
  | [`save_model`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.save_model "qiskit.aqua.components.neural_networks.NumPyDiscriminator.save_model")(snapshot\_dir)    | Save discriminator model                                                                                                                                                                                                                  |
  | [`set_seed`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.set_seed "qiskit.aqua.components.neural_networks.NumPyDiscriminator.set_seed")(seed)                   | Set seed.                                                                                                                                                                                                                                 |
  | [`train`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.train "qiskit.aqua.components.neural_networks.NumPyDiscriminator.train")(data, weights\[, penalty, …])    | Perform one training step w\.r.t to the discriminator’s parameters                                                                                                                                                                        |

  ## Attributes

  |                                                                                                                                                                                   |                   |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------- |
  | [`discriminator_net`](#qiskit.aqua.components.neural_networks.NumPyDiscriminator.discriminator_net "qiskit.aqua.components.neural_networks.NumPyDiscriminator.discriminator_net") | Get discriminator |

  ### discriminator\_net

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.discriminator_net" name="discriminator_net" signature="property discriminator_net">
    Get discriminator

    **Returns**

    discriminator object

    **Return type**

    DiscriminatorNet
  </Function>

  ### get\_label

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.get_label" name="get_label" signature="get_label(x, detach=False)">
    Get data sample labels, i.e. true or fake.

    **Parameters**

    *   **x** (*numpy.ndarray*) – Discriminator input, i.e. data sample.
    *   **detach** (*bool*) – depreciated for numpy network

    **Returns**

    Discriminator output, i.e. data label

    **Return type**

    numpy.ndarray
  </Function>

  ### load\_model

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.load_model" name="load_model" signature="load_model(load_dir)">
    Load discriminator model

    **Parameters**

    **load\_dir** (*str*) – file with stored pytorch discriminator model to be loaded
  </Function>

  ### loss

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.loss" name="loss" signature="loss(x, y, weights=None)">
    Loss function :param x: sample label (equivalent to discriminator output) :type x: numpy.ndarray :param y: target label :type y: numpy.ndarray :param weights: customized scaling for each sample (optional) :type weights: numpy.ndarray

    **Returns**

    loss function

    **Return type**

    float
  </Function>

  ### save\_model

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.save_model" name="save_model" signature="save_model(snapshot_dir)">
    Save discriminator model

    **Parameters**

    **snapshot\_dir** (*str*) – directory path for saving the model
  </Function>

  ### set\_seed

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.set_seed" name="set_seed" signature="set_seed(seed)">
    Set seed. :param seed: seed :type seed: int
  </Function>

  ### train

  <Function id="qiskit.aqua.components.neural_networks.NumPyDiscriminator.train" name="train" signature="train(data, weights, penalty=False, quantum_instance=None, shots=None)">
    Perform one training step w\.r.t to the discriminator’s parameters

    **Parameters**

    *   **data** (*tuple(numpy.ndarray, numpy.ndarray)*) – real\_batch: array, Training data batch. generated\_batch: array, Generated data batch.
    *   **weights** (*tuple*) – real problem, generated problem
    *   **penalty** (*bool*) – Depreciated for classical networks.
    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – Depreciated for classical networks.
    *   **shots** (*int*) – Number of shots for hardware or qasm execution. Ignored for classical networks.

    **Returns**

    with Discriminator loss and updated parameters.

    **Return type**

    dict
  </Function>
</Class>

